--- a/todo/.scalafmt.conf
+++ b/todo/.scalafmt.conf
@@ -1,23 +1,75 @@
-version = "2.5.3"
+version = "3.0.1"
 
 align {
-  stripMargin = true
+  preset = none
+  stripMargin = yes
 }
 
-assumeStandardLibraryStripMargin = false
+assumeStandardLibraryStripMargin = no
 
-binPack {
-  literalArgumentLists = false
+docstrings {
+  oneline = keep
+  style = SpaceAsterisk
+  wrap = no
 }
 
-continuationIndent {
+fileOverride {
+  "glob:**/*.sbt" {
+    runner {
+      # https://scalameta.org/scalafmt/docs/configuration.html#scala-dialects
+      dialect = Scala212
+    }
+  }
+  "glob:**/project/*.scala" {
+    runner {
+      # https://scalameta.org/scalafmt/docs/configuration.html#scala-dialects
+      dialect = Scala212
+    }
+  }
+}
+
+includeNoParensInSelectChains = yes
+
+indent {
+  ctrlSite = 4
+  caseSite = 5
   withSiteRelativeToExtends = 3
+  commaSiteRelativeToExtends = 8
 }
 
-includeNoParensInSelectChains = true
+indentOperator {
+  topLevelOnly = false
+}
+
+lineEndings = preserve
+
+maxColumn = 100
 
 newlines {
-  alwaysBeforeElseAfterCurlyIf = true
+  alwaysBeforeElseAfterCurlyIf = yes
+  avoidInResultType = yes
+  avoidForSimpleOverflow = [slc]
+  beforeCurlyLambdaParams = multilineWithCaseOnly
+  topLevelStatementBlankLines = [
+    {
+      blanks {
+        beforeAll = -1,
+        before = 1,
+        after = 1,
+        afterAll = -1,
+        beforeEndMarker = -1
+      }
+      minBreaks = 1
+    },
+    {
+      blanks {
+        beforeAll = -1,
+        afterAll = -1,
+        beforeEndMarker = -1
+      }
+      minBreaks = 0
+    }
+  ]
 }
 
 project {
@@ -28,23 +80,21 @@ project {
 
 rewrite {
   rules = [
-    PreferCurlyFors,
-    RedundantBraces,
-    RedundantParens,
-    SortImports,
-    SortModifiers,
+    PreferCurlyFors
+    RedundantBraces
+    RedundantParens
+    SortModifiers
   ]
-  
   sortModifiers {
     order = [
-      "final",
-      "sealed",
-      "abstract",
-      "override",
-      "implicit",
-      "private",
-      "protected",
-      "lazy"
+      final
+      sealed
+      abstract
+      override
+      implicit
+      private
+      protected
+      lazy
     ]
   }
 }
@@ -55,15 +105,22 @@ rewriteTokens {
   "←" = "<-"
 }
 
-spaces {
-  inImportCurlyBraces = true
+runner {
+  # https://scalameta.org/scalafmt/docs/configuration.html#scala-dialects
+  dialect = scala3
 }
+
+spaces {
+  inImportCurlyBraces = yes
+}
+
+trailingCommas = multiple
 
 verticalMultiline {
   arityThreshold = 3
-  atDefnSite = true
+  atDefnSite = yes
   excludeDanglingParens = []
-  newlineAfterImplicitKW = true
-  newlineAfterOpenParen = true
-  newlineBeforeImplicitKW = false
+  newlineAfterImplicitKW = yes
+  newlineAfterOpenParen = yes
+  newlineBeforeImplicitKW = no
 }
